force-app/main/default/objects/C_Form_Submission__c/C_Form_Submission__c.object-meta.xml
<CustomObject>
    <description>A user submission of a form containing all their responses and score</description>
    <label>Form Submission</label>
    <nameField>
        <label>Form Submission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>