force-app/main/default/objects/C_Form_Submission__c/fields/C_Account__c.field-meta.xml
<CustomField>
    <fullName>C_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>C_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>