force-app/main/default/objects/C_Form_Submission__c/fields/C_Contact__c.field-meta.xml
<CustomField>
    <fullName>C_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>C_Form_Submissions_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>