force-app/main/default/objects/C_Form_Submission__c/fields/C_Draft_State_JSON__c.field-meta.xml
<CustomField>
    <fullName>C_Draft_State_JSON__c</fullName>
    <label>Draft State JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>