force-app/main/default/objects/C_Form_Submission__c/fields/C_Final_Score__c.field-meta.xml
<CustomField>
    <fullName>C_Final_Score__c</fullName>
    <label>Final Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>