force-app/main/default/objects/C_Form_Submission__c/fields/C_Form__c.field-meta.xml
<CustomField>
    <fullName>C_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>C_Form__c</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>C_Form_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>