force-app/main/default/objects/C_Form_Submission__c/fields/C_Form_Version__c.field-meta.xml
<CustomField>
    <fullName>C_Form_Version__c</fullName>
    <label>Form Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>