force-app/main/default/objects/C_Form_Submission__c/fields/C_Is_Testing__c.field-meta.xml
<CustomField>
    <fullName>C_Is_Testing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing</label>
    <type>Checkbox</type>
</CustomField>