force-app/main/default/objects/C_Form_Submission__c/fields/C_Language__c.field-meta.xml
<CustomField>
    <fullName>C_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>en</fullName><default>true</default><label>English</label></value>
            <value><fullName>fr</fullName><default>false</default><label>French</label></value>
            <value><fullName>nl</fullName><default>false</default><label>Dutch</label></value>
            <value><fullName>de</fullName><default>false</default><label>German</label></value>
            <value><fullName>pt</fullName><default>false</default><label>Portuguese</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>