force-app/main/default/objects/C_Form_Submission__c/fields/C_Lead__c.field-meta.xml
<CustomField>
    <fullName>C_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Form Submissions</relationshipLabel>
    <relationshipName>C_Form_Submissions_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>