force-app/main/default/objects/C_Form_Submission__c/fields/C_Record_Context_JSON__c.field-meta.xml
<CustomField>
    <fullName>C_Record_Context_JSON__c</fullName>
    <description>Stores the record context map (JSON) passed when the form was launched. Used by outbound field mappings at submit time to resolve the same target records. Format: {"key":"recordId",...}</description>
    <label>Record Context JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>