force-app/main/default/objects/C_Form_Submission__c/fields/C_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>C_Record_Id__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>