force-app/main/default/objects/C_Form_Submission__c/fields/C_Status__c.field-meta.xml
<CustomField>
    <fullName>C_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In Progress</fullName><default>true</default><label>In Progress</label></value>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Validated</fullName><default>false</default><label>Validated</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>