force-app/main/default/objects/C_Form_Submission__c/fields/C_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>C_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>