force-app/main/default/objects/C_Form_Submission__c/listViews/All_Form_Submissions.listView-meta.xml
<ListView>
    <fullName>All_Form_Submissions</fullName>
    <columns>NAME</columns>
    <columns>C_Form__c</columns>
    <columns>C_Status__c</columns>
    <columns>C_Final_Score__c</columns>
    <columns>C_Account__c</columns>
    <columns>C_Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Form Submissions</label>
</ListView>